PHASE TWO FINISHED WITHOUT THESTING
Finita la fase due senza l'implementazione del superuser che dice dove devono stare i tag
Inserita la opacita delle zone nella tabella rtls
Rimosso dai percorsi la cartella SMARTSTUDIO

--- a/components/anchors-table.html
+++ b/components/anchors-table.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hideAnchors()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -51,7 +51,7 @@
                 <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
                     ng-repeat="anchor in anchors | orderBy: query.order | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell><img alt="Stato ancora" title="Stato ancora"
-                                     ng-src="{{anchor.is_online ? '../SMARTSTUDIO/img/icons/tags/anchor_online_16.png' : '../SMARTSTUDIO/img/icons/tags/anchor_offline_16.png'}}">
+                                     ng-src="{{anchor.is_online ? 'img/icons/tags/anchor_online_16.png' : 'img/icons/tags/anchor_offline_16.png'}}">
                     </td>
 
                     <td md-cell class="no-wrap" ng-click="editCell($event, anchor, 'name')"
@@ -104,7 +104,7 @@
                     </td>
 
                     <td md-cell class="no-wrap" ng-click="deleteRow(anchor)"><img
-                            src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella ancora" title="Cancella ancora"></td>
+                            src="img/icons/delete_trash_24.png" alt="Cancella ancora" title="Cancella ancora"></td>
 
                 </tr>
                 </tbody>
@@ -113,7 +113,7 @@
 
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
-                <img src="../SMARTSTUDIO/img/icons/add_row_32.png" class="outline-none cursor-pointer"
+                <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="Aggiungi ancora" title="Aggiungi ancora">
             </div>
         </md-input-container>
