--- a/components/floor-settings.html
+++ b/components/floor-settings.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -56,7 +56,7 @@
                                 class="ng-hide" id="floor-image-{{floor.id}}"></label>SELEZIONA IMMAGINE
                         </md-button>
                     </td>
-                    <td md-cell ng-click="deleteRow(floor)"><img src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella piano" title="Cancella piano">
+                    <td md-cell ng-click="deleteRow(floor)"><img src="img/icons/delete_trash_24.png" alt="Cancella piano" title="Cancella piano">
                     </td>
                 </tr>
                 </tbody>
@@ -65,7 +65,7 @@
 
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
-                <img src="../SMARTSTUDIO/img/icons/add_row_32.png" class="outline-none cursor-pointer"
+                <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="Aggiungi piano" title="Aggiungi piano">
             </div>
         </md-input-container>
