--- a/components/insert-tag-mac.html
+++ b/components/insert-tag-mac.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -49,7 +49,7 @@
                         {{'' + mac.type || 'Inserire tipo'}}
                     </td>
                     <td md-cell ng-click="deleteMac($event, mac)"><img
-                            src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella mac" title="Aggiungi mac"></td>
+                            src="img/icons/delete_trash_24.png" alt="Cancella mac" title="Aggiungi mac"></td>
                 </tr>
                 <tr md-row ng-show="macs.length === 0">
                     <td md-cell colspan="8" class="text-center color-red">Nessun risultato trovato</td>
@@ -60,7 +60,7 @@
 
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
-                <img src="../SMARTSTUDIO/img/icons/add_row_32.png" class="outline-none cursor-pointer"
+                <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewMac()" alt="Aggiungi mac" title="Aggiungi mac">
             </div>
         </md-input-container>
