--- a/components/video-camera.html
+++ b/components/video-camera.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" ng-class="isTagInAlarm">
         <div class="width-100" layout="row" layout-align="end center">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img alt="Close" src="../SMARTSTUDIO/img/icons/close-icon.png" title="Close"/>
+                <img alt="Close" src="img/icons/close-icon.png" title="Close"/>
             </md-button>
         </div>
 
         <div class="margin-top--20-px" layout="row" layout-align="center center">
-            <img alt="Smart Track" class="popup-icon" src="../SMARTSTUDIO/img/icons/login-icon.png" title="Smart Track">
+            <img alt="Smart Track" class="popup-icon" src="img/icons/login-icon.png" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -24,7 +24,7 @@
 <md-content>
     <div layout="column" layout-align="center center">
         <video width="400" controls>
-            <source src="../SMARTSTUDIO/resources/videoplayback.mp4" type="video/mp4">
+            <source src="resources/videoplayback.mp4" type="video/mp4">
         </video>
     </div>
 </md-content>
