--- a/components/emergency-alarm-info.html
+++ b/components/emergency-alarm-info.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -32,7 +32,7 @@
             <div layout="column">
                 <md-list>
                     <md-list-item class="md-3-line">
-                        <img src="../SMARTSTUDIO/img/icons/safe-men.png" class="md-avatar" alt="Persona in area sicura"
+                        <img src="img/icons/safe-men.png" class="md-avatar" alt="Persona in area sicura"
                              title="Persona in area sicura">
                         <div class="md-list-item-text" layout="column">
                             <h3>Persone nell'area sicura: <b class="color-green">{{ men.safe }}</b></h3>
@@ -40,7 +40,7 @@
                         </div>
                     </md-list-item>
                     <md-list-item class="md-3-line">
-                        <img src="../SMARTSTUDIO/img/icons/unsafe-men.png" class="md-avatar"
+                        <img src="img/icons/unsafe-men.png" class="md-avatar"
                              alt="Persona non in area sicura" title="Persona non in area sicura">
                         <div class="md-list-item-text" layout="column">
                             <h3>Persone disperse: <b class="color-red">{{ men.unsafe }}</b></h3>
