--- a/components/indoor_offline_anchors_info.html
+++ b/components/indoor_offline_anchors_info.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -33,14 +33,14 @@
         <div layout="column">
             <md-list>
                 <md-list-item class="md-2-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/anchor_online_24.png" class="md-avatar" alt="Ancora online" title="Ancora offline">
+                    <img src="img/icons/tags/anchor_online_24.png" class="md-avatar" alt="Ancora online" title="Ancora offline">
                     <div class="md-list-item-text" layout="column">
                         <h3>Anchore online: <b class="color-green">{{anchorsState.online}}</b></h3>
                         <h4>{{ anchorsState.online }} ancora/e e'/sono online e trasmette/ono dati</h4>
                     </div>
                 </md-list-item>
                 <md-list-item class="md-3-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/anchor_offline_24.png" class="md-avatar" alt="Ancora offline" title="Ancora offline">
+                    <img src="img/icons/tags/anchor_offline_24.png" class="md-avatar" alt="Ancora offline" title="Ancora offline">
                     <div class="md-list-item-text" layout="column">
                         <h3>Anchore offline: <b class="color-darkgray">{{ offlineAnchors.length }}</b></h3>
                         <h4>{{ offlineAnchors.length }} anchora/e e'/sono offline e non trasmette/ono dati</h4>
