--- a/components/indoor_offline_tags_info.html
+++ b/components/indoor_offline_tags_info.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -33,7 +33,7 @@
         <div layout="column">
             <md-list>
                 <md-list-item class="md-2-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/online_tag_24.png" class="md-avatar" alt="Tag online"
+                    <img src="img/icons/tags/online_tag_24.png" class="md-avatar" alt="Tag online"
                          title="Tag online">
                     <div class="md-list-item-text" layout="column">
                         <h3>Tags online: <b class="color-green">{{tagsStateIndoor.online}}</b></h3>
@@ -41,7 +41,7 @@
                     </div>
                 </md-list-item>
                 <md-list-item class="md-3-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag offline"
+                    <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag offline"
                          title="Tag offline">
                     <div class="md-list-item-text" layout="column">
                         <h3>Tags offline: <b class="color-darkgray">{{ offlineTagsIndoor.length }}</b></h3>
@@ -56,7 +56,7 @@
                     </div>
                 </md-list-item>
                 <md-list-item class="md-2-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag dispersi"
+                    <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag dispersi"
                          title="Tag dispersi">
                     <div class="md-list-item-text" layout="column">
                         <h3>Tags dispersi: <b class="color-orange">{{tagsStateIndoor.offgrid}}</b></h3>
@@ -71,7 +71,7 @@
                     </div>
                 </md-list-item>
                 <md-list-item class="md-2-line">
-                    <img src="../SMARTSTUDIO/img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag dispersi"
+                    <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="Tag dispersi"
                          title="Tag dispersi">
                     <div class="md-list-item-text" layout="column">
                         <h3>Tags spenti: <b class="color-red">{{tagsStateIndoor.offTags}}</b></h3>
