--- a/components/login.html
+++ b/components/login.html
@@ -7,7 +7,7 @@
             <form id="loginForm" name="loginForm">
 
                 <div layout="row" layout-align="center center">
-                    <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="avatar-image border-radius-50"
+                    <img src="img/icons/login-icon.png" class="avatar-image border-radius-50"
                          alt="Smart Track" title="Smart Track">
                 </div>
 
