--- a/components/recover-password-code.html
+++ b/components/recover-password-code.html
@@ -9,7 +9,7 @@
                 <form id="recoverPassCodeForm" name="recoverPassCodeForm">
 
                     <div layout="row" layout-align="center center">
-                        <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="avatar-image border-radius-50"
+                        <img src="img/icons/login-icon.png" class="avatar-image border-radius-50"
                              alt="Smart Track" title="Smart Track">
                     </div>
 
